@@ -4,6 +4,8 @@ Revision history for Perl extension Mobile::P2kMoto.
 	- Added easy_openPhone() as a simplified interface
 	  to (auto)configuration, P2K mode setting and opening
 	  the phone.
+	- Added dir() as a simplified and more powerful interface to
+	  searchRequest/fileList.
 	- Fixed open() and read() to actually work.
 
 0.01  Tue Jun 26 21:10:14 CEST 2007
